cambios agregamos mis hobbies

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hello world</title>
 </head>
 <body>
-    <p>Hi guys , what´s up.That's my new and first website follow me on my social media like Vj__03 thanks</p>
+    <p>Hi dude's , what´s up.That's my new and first website follow me on my social media like Vj__03 thanks</p>
 </body>
 </html>
